# tftpy

./: .pylintrc  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: release.yml  test.yml
tests/: test_tftpy.py
tftpy/: __init__.py
