[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli =  false
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
addopts = "--strict-markers -rxX --tb=long --color=yes"
markers = "subscript"
testpaths = [
    "tests/",
]

[tool.coverage.run]
branch = true
source = [
    "tftpy/",
    ".tox/py*/lib/python*/site-packages/",
]
omit = [
    "tests/*",
    ".tox",
]

[tool.coverage.paths]
source = ["tftpy"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]
omit = [
    "doc*",
    "tests/*",
]
