[metadata]
name = tftpy
version = attr: setuptools_scm.get_version
description = A TFTP protocol library for Python
url = https://github.com/msoulier/tftpy
author = Michael Soulier
author_email = msoulier@digitaltorque.ca
long_description = file: README.md
long_description_content_type = text/markdown
license_expression = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Operating System :: OS Independent
    Topic :: Internet
    Topic :: Software Development
    Topic :: Software Development :: Testing

project_urls =
    Source = https://github.com/msoulier/tftpy.git
    Issues = https://github.com/msoulier/tftpy/issues

[options]
python_requires =
    >= 3.8

setup_requires =
    setuptools_scm[toml]

install_requires =

packages =
    tftpy

scripts =
    bin/tftpy_client.py
    bin/tftpy_server.py

[options.extras_require]
doc =
    sphinx
    sphinx_git
    myst-parser
    sphinx_rtd_theme<3.0
    sphinxcontrib-apidoc
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    doc,
    docs,
    tests

max-line-length = 90
